@@ -9,18 +9,23 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <gwt.version>2.6.1</gwt.version>
-        <gwtp.version>1.3.1</gwtp.version>
+        <gwt.version>2.7.0</gwt.version>
+        <gwtp.version>1.4</gwtp.version>
         <gin.version>2.1.2</gin.version>
         <guice.version>3.0</guice.version>
 
         <spring.version>4.0.5.RELEASE</spring.version>
-        <spring-security.version>3.2.4.RELEASE</spring-security.version>
+        <oauth.version>2.0.5.RELEASE</oauth.version>
+        <spring-security.version>3.2.5.RELEASE</spring-security.version>
+        <spring-social.version>1.1.0.RELEASE</spring-social.version>
         <servlet.version>3.1.0</servlet.version>
+        <jstl-api.version>1.2.1</jstl-api.version>
+        <jsp-api.version>2.3.2-b01</jsp-api.version>
         <jackson.version>2.3.1</jackson.version>
         <logback.version>1.1.1</logback.version>
         <slf4j.version>1.7.6</slf4j.version>
         <jsr250.version>1.0</jsr250.version>
+        <google-oauth.version>1.19.0</google-oauth.version>
 
         <!--Plugin versions-->
         <maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
@@ -110,10 +115,27 @@
             <version>${servlet.version}</version>
         </dependency>
         <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+            <version>${jstl-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>${jsp-api.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -121,6 +143,11 @@
         </dependency>
 
         <!-- Security -->
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${oauth.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
@@ -140,6 +167,37 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>${spring-security.version}</version>
+        </dependency>
+
+        <!-- Spring Social -->
+        <dependency>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-security</artifactId>
+            <version>${spring-social.version}</version>
+        </dependency>
+
+        <!-- thirdParty -->
+        <dependency>
+            <groupId>com.google.oauth-client</groupId>
+            <artifactId>google-oauth-client</artifactId>
+            <version>${google-oauth.version}</version>
+        </dependency>
+
+        <!-- Others -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.186</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
@@ -183,7 +241,7 @@
                     <mode>htmlunit</mode>
                     <gen>gen</gen>
 
-                    <extraJvmArgs>-Xss1024k -Xmx512M -XX:MaxPermSize=512m</extraJvmArgs>
+                    <extraJvmArgs>-Xss1024k -Xmx512M</extraJvmArgs>
                     <logLevel>INFO</logLevel>
 
                     <copyWebapp>true</copyWebapp>
